Add ScriptCompiler interface (#70657)
TypeParser.ParserContext exposes a ScriptService allowing type parsers to
compile scripts from runtime fields (and in future, index-time scripts). However,
ScriptService itself is a fairly heavyweight object, and you can only add script
parsers to it via the Plugin mechanism.

To make testing easier, this commit extracts a ScriptCompiler interface and makes
that available from ParserContext instead.